src/test/ui/linkage3.stderr
error: invalid linkage specified
  --> $DIR/linkage3.rs:14:24
   |
LL |     #[linkage = "foo"] static foo: *const i32;
   |                        ^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

